--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-<<<<<<< HEAD
-    <title>Chino re marica</title>
-=======
     
     <title>Parking +</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Compiled and minified CSS materialize -->
+    
+
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&family=Prompt:wght@100;300;800&display=swap" rel="stylesheet">
->>>>>>> main
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
